fixes and aligns section padding

--- a/output.css
+++ b/output.css
@@ -32,6 +32,10 @@
   width: 50px;
 }
 
+body {
+  margin: 0;
+}
+
 nav {
   border: 1px solid red;
   display: flex;
@@ -42,7 +46,7 @@ nav {
   margin: 0;
   flex-direction: row;
   justify-content: left;
-  margin: 10px 5% 10px 5%;
+  padding: 10px 5% 10px 5%;
 }
 
 header {
@@ -80,7 +84,7 @@ menu {
   justify-content: center;
   padding: 0;
   margin: 0;
-  margin: 5%;
+  padding: 5%;
   flex-direction: column;
 }
 menu h1 {
@@ -96,6 +100,7 @@ menu h1 {
   padding: 0;
   margin: 0;
   background-color: #FAA196;
+  padding: 5%;
 }
 
 footer {
